<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/content"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/white"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.wikipedi.wikipedigo.activity.NoInternetActivity">

	<Button
		android:id="@+id/btnRetry"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="@dimen/activity_vertical_margin"
		android:background="@color/colorAccent"
		android:text="@string/retry"
		android:textColor="@color/white"
		android:textSize="@dimen/text_header"
		android:textStyle="bold"/>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@id/btnRetry"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:gravity="center">

		<ImageView
			android:id="@+id/icon"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:layout_centerHorizontal="true"
			android:src="@drawable/ic_face"/>

		<TextView
			android:id="@+id/oops"
			style="@style/TitleText"
			android:layout_below="@id/icon"
			android:layout_marginTop="@dimen/item_padding"
			android:gravity="center"
			android:text="@string/oops"/>

		<TextView
			android:id="@+id/remarkText"
			style="@style/TitleText"
			android:layout_below="@id/oops"
			android:layout_marginTop="5dp"
			android:gravity="center"
			android:text="@string/no_internet_short"
			android:textStyle=""/>
	</RelativeLayout>
</RelativeLayout>