<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/content"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/white"
	android:orientation="vertical"
	tools:ignore="ContentDescription">

	<TextView
		android:id="@+id/textView2"
		style="@style/SectionText"
		android:layout_gravity="center_vertical"
		android:background="@color/colorPrimary"
		android:gravity="center_vertical"
		android:padding="@dimen/activity_horizontal_margin"
		android:text="@string/sort_by"
		android:textAllCaps="true"
		android:textColor="@color/white"
		android:textStyle="bold"/>

	<LinearLayout
		android:id="@+id/dateContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="@dimen/activity_horizontal_margin"
		android:paddingLeft="@dimen/item_padding"
		android:paddingRight="@dimen/item_padding">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="5dp"
			android:paddingRight="5dp"
			android:src="@drawable/ic_date"/>

		<TextView
			android:id="@+id/textView"
			style="@style/SectionText"
			android:layout_gravity="center_vertical"
			android:layout_marginLeft="@dimen/item_padding"
			android:layout_marginStart="@dimen/item_padding"
			android:gravity="center_vertical"
			android:text="@string/date"
			android:textAllCaps="true"
			android:textColor="@color/dark_grey"
			android:textStyle=""/>
	</LinearLayout>

	<View
		android:id="@+id/separator1"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/divider"/>

	<LinearLayout
		android:id="@+id/popularityContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="@dimen/activity_horizontal_margin"
		android:paddingLeft="@dimen/item_padding"
		android:paddingRight="@dimen/item_padding">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="5dp"
			android:paddingRight="5dp"
			android:src="@drawable/ic_popular"/>

		<TextView
			style="@style/SectionText"
			android:layout_gravity="center_vertical"
			android:layout_marginLeft="@dimen/item_padding"
			android:layout_marginStart="@dimen/item_padding"
			android:gravity="center_vertical"
			android:text="@string/popularity"
			android:textAllCaps="true"
			android:textColor="@color/dark_grey"/>
	</LinearLayout>

	<View
		android:id="@+id/separator2"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/divider"/>

	<LinearLayout
		android:id="@+id/alphabeticContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="@dimen/activity_horizontal_margin"
		android:paddingLeft="@dimen/item_padding"
		android:paddingRight="@dimen/item_padding">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="5dp"
			android:paddingRight="5dp"
			android:src="@drawable/ic_alphabetic"/>

		<TextView
			style="@style/SectionText"
			android:layout_gravity="center_vertical"
			android:layout_marginLeft="@dimen/item_padding"
			android:layout_marginStart="@dimen/item_padding"
			android:gravity="center_vertical"
			android:text="@string/alphabetical"
			android:textAllCaps="true"
			android:textColor="@color/dark_grey"/>
	</LinearLayout>

	<View
		android:id="@+id/separator3"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/divider"/>

	<TextView
		style="@style/SectionText"
		android:layout_gravity="center_vertical"
		android:background="@color/colorPrimary"
		android:gravity="center_vertical"
		android:padding="@dimen/activity_horizontal_margin"
		android:text="@string/sort_from"
		android:textAllCaps="true"
		android:textColor="@color/white"
		android:textStyle="bold"/>

	<View
		android:id="@+id/separator4"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/divider"/>

	<LinearLayout
		android:id="@+id/sortContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:weightSum="1">

		<TextView
			android:id="@+id/ascending"
			style="@style/SectionText"
			android:layout_gravity="center_vertical"
			android:layout_weight="0.5"
			android:gravity="center_horizontal"
			android:padding="@dimen/activity_horizontal_margin"
			android:textAllCaps="true"
			android:textColor="@color/dark_grey"/>

		<TextView
			android:id="@+id/descending"
			style="@style/SectionText"
			android:layout_gravity="center_vertical"
			android:layout_weight="0.5"
			android:gravity="center_horizontal"
			android:padding="@dimen/activity_horizontal_margin"
			android:textAllCaps="true"
			android:textColor="@color/dark_grey"/>
	</LinearLayout>

	<View
		android:id="@+id/separator5"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/divider"/>

</LinearLayout>